2005-11-08  Tom Tromey  <tromey@redhat.com>

	* gnu/classpath/SystemProperties.java: Don't mention
	gnu.java.awt.FocusManager.

2005-11-08  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/CompositeView.java
	(modelToView): Adjust the allocation to the child allocation before
	forwarding to the child's modelToView. Replaced AssertionError by
	BadLocationException, because that is the right thing to do here.

2005-11-08  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(GlassPaneDispatcher.acquireComponentForMouseEvent): Use the
	frame's layeredPane as parent instead of the content pane
	when searching for the event target. This way a possibly set menubar
	is also included in the search.

2005-11-08  Lillian Angel  <langel@redhat.com>

	* java/awt/Window.java
	(setLocationRelativeTo): Changed x and y to use getLocationOnScreen
	and moved setLocation call outside of check.
	* javax/swing/JOptionPane.java
	(createDialog): Moved pack call and setLocationRelativeTo call here
	and removed these calls from all other functions that call
	createDialog. Also, removed FIXME, since call to setLocationRelativeTo
	fixes this.
	(showConfirmDialog): Removed pack and setLocationRelativeTo calls.
	(showConfirmDialog): Likewise.
	(showConfirmDialog): Likewise.
	(showConfirmDialog): Likewise.
	(showInputDialog): Likewise.
	(showInputDialog): Likewise.
	(showInputDialog): Likewise.
	(showInputDialog): Likewise.
	(showInputDialog): Likewise.
	(showInputDialog): Likewise.
	(showMessageDialog): Likewise.
	(showMessageDialog): Likewise.
	(showOptionDialog): Likewise.
	* javax/swing/JTree.java
	(JTree): Should not use a shared instance of the selection model. It
	is a problem when one application has two different trees.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(paintRow): Changed parameter to be the focus of the tree.
	(updateCurrentVisiblePath): Adjusted root path incase the root is hidden.
